--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
