--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "background-image-on-load": "^1.1.0",
     "blurhash": "^2.0.5",
     "framer-motion": "^10.16.4",
